--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_ACCESS = "mongodb+srv://Jagveer:Jagveer@cluster0.rpv8d.mongodb.net/SignUpBackend?retryWrites=true&w=majority"
+DATABASE_ACCESS = "mongodb+srv://Jagveer:Jagveer@cluster0.rpv8d.mongodb.net/UserDataBackend?retryWrites=true&w=majority"
